--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,3 +13,4 @@ jobs:
     - run: ./bin/hermit env --raw >> $GITHUB_ENV
     - run: go test ./...
     - run: golangci-lint run
+    - run: make -C compiler ci
