--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,6 +11,4 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - run: ./bin/hermit env --raw >> $GITHUB_ENV
-    - run: go test ./...
-    - run: golangci-lint run
-    - run: make -C compiler ci
+    - run: make ci
