chore: upgrade to Go 1.18 + latest Participle

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -36,6 +36,12 @@ linters:
     - cyclop
     - gocognit
     - gofumpt
+    - exhaustruct
+    - nosnakecase
+    - nolintlint
+    - nonamedreturns
+    - gofmt
+    - goimports
 
 linters-settings:
   govet:
